Jack Argobot/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/Jack/Documents/CPP/Argos/Jack%20Argobot/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramDebugExecutableFrcUserProgramCpp.
compiling ExampleSubsystem.cpp successful.

compiling ExampleCommand.cpp successful.

compiling Autos.cpp successful.

compiling DriveSubsystem.cpp successful.

compiling Robot.cpp failed.
C:\Users\Jack\Documents\CPP\Argos\Jack Argobot\src\main\cpp\Robot.cpp: In member function 'virtual void Robot::AutonomousInit()':
C:\Users\Jack\Documents\CPP\Argos\Jack Argobot\src\main\cpp\Robot.cpp:40:26: error: request for member 'Schedule' in '*((Robot*)this)->Robot::m_autonomousCommand.std::optional<frc2::Command*>::operator->()', which is of pointer type 'frc2::Command*' (maybe you meant to use '->' ?)
   40 |     m_autonomousCommand->Schedule();
      |                          ^~~~~~~~
C:\Users\Jack\Documents\CPP\Argos\Jack Argobot\src\main\cpp\Robot.cpp: In member function 'virtual void Robot::TeleopInit()':
C:\Users\Jack\Documents\CPP\Argos\Jack Argobot\src\main\cpp\Robot.cpp:52:26: error: request for member 'Cancel' in '*((Robot*)this)->Robot::m_autonomousCommand.std::optional<frc2::Command*>::operator->()', which is of pointer type 'frc2::Command*' (maybe you meant to use '->' ?)
   52 |     m_autonomousCommand->Cancel();
      |                          ^~~~~~

compiling RobotContainer.cpp successful.

Finished compileFrcUserProgramDebugExecutableFrcUserProgramCpp, see full log file:///C:/Users/Jack/Documents/CPP/Argos/Jack%20Argobot/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt.
